--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,7 +1,9 @@
-kathara>=3.7.0;
-pybatfish;
-coloredlogs;
-requests;
-sortedcontainers;
-mrtparse;
-cisco-config-parser;
+kathara>=3.7.0
+pybatfish
+coloredlogs
+requests
+sortedcontainers
+mrtparse
+cisco-config-parser
+antlr4-python3-runtime
+antlr4-tools
